# noisy_web_traffic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  LICENCE-APACHE  LICENCE-MIT  README.md  config.yaml  machine_config.json
config/: polling.toml  route.toml
src/: client.rs  config.rs  config_reader.rs  crawl.rs  logger.rs  machine_config.rs  main.rs  models.rs  parser.rs  polling.rs  validation.rs
src/client/: reqwest.rs
src/clients/: reqwest.rs
src/config/: parser.rs  route.rs  rules.rs
src/config/routes/: host.rs  hosts.rs  path.rs  paths.rs  permission.rs  port.rs  ports.rs  scheme.rs  schemes.rs
src/crawlers/: urls.rs
src/models/: polling.rs  route.rs  routes.rs  rules.rs
src/models/polling/: depth.rs  proxies.rs  proxy.rs  redirections.rs  time.rs  user_agent.rs  user_agents.rs
src/models/routes/: follow_robots_exclusion_protocol.rs  host.rs  hosts.rs  method.rs  methods.rs  path.rs  paths.rs  permission.rs  port.rs  ports.rs  root_url.rs  root_urls.rs  scheme.rs  schemes.rs
src/parser/: dom.rs  robots_txt.rs  urls.rs
src/validation/: robots_rules.rs  route.rs
