[package]
name = "noisy_web_traffic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
html_parser = "0.6.3"
regex = "1.6.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.0"
yaml-rust = "0.4"
serde_json = "1.0.83"
serde_derive = "1.0.143"
serde = "1.0.143"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true