[package]
name = "noisy_web_traffic"
version = "1.0.0-beta.1"
description = "Noisy web traffic generator"
readme = "README.md"
repository = "https://github.com/Desiders/noisy_web_traffic/"
license = "MIT OR Apache-2.0"
keywords = ["noisy", "web", "traffic"]
categories = ["command-line-utilities", "web-programming::http-client", "simulation"]

edition = "2021"

[dependencies]
url = "2.5"
glob = "0.3"
toml = "0.8"
async-recursion = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
backoff = "0.4"
rand = "0.8"
tl = "0.7"